--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,6 +8,9 @@ editor_options:
   chunk_output_type: console
 ---
 
+# Data
+
+[link](https://sq-96.github.io/multigroup_ctwas_analysis/data.html)
 
 
 # Multi-tissue 
