wflow_publish("analysis/index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -12,7 +12,9 @@ editor_options:
 
 [link](https://sq-96.github.io/multigroup_ctwas_analysis/data.html)
 
+# LD mismatch diagnosis
 
+[LD mismatch diagnosis using `susie_rss`](detect_LD_mismatch_gwas_UKBBref_susie_rss.html)
 
 # Multi-tissue 
 
